--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
       }
 
+      canvas.style.width = "100%";
+      canvas.style.height = "100%";
+
       createUnityInstance(document.querySelector("#unity-canvas"), {
         arguments: [],
         dataUrl: "Build/WebBuild.data",
