--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Cache-Control" content="max-age=31536000, immutable">
     <title>Unity Web Player | Match3TelegrammApp</title>
   </head>
   <body style="padding: 0; border: 0; margin: 0;">
