--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
         arguments: [],
-        dataUrl: "Build/WebBuild.data",
-        frameworkUrl: "Build/WebBuild.framework.js",
-        codeUrl: "Build/WebBuild.wasm",
+        dataUrl: "Build/WebBuild.data.unityweb",
+        frameworkUrl: "Build/WebBuild.framework.js.unityweb",
+        codeUrl: "Build/WebBuild.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "MiKo",
         productName: "Match3TelegrammApp",
